2021-09-18  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Fix typo in TIS-620 character name.

	* include/thai/tis.h:
	  - Fix typo TIS_[S]YMBOL_BAHT, with backward compatibility macro.

2021-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update Doxyfile for doxygen 1.9.1.

	* doc/Doxyfile.in:
	  - Apply 'doxygen -u'.
	  - Fix invalid PAPER_TYPE 'a4wide' to 'a4'.
	* configure.ac:
	  - Bump doxygen required version.

2021-08-31  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Apply 'autoupdate' for autoconf 2.71

	* configure.ac:
	  - Quote m4 strings in AC_INIT() parameters.
	  - Replace obsolete AC_PROG_LIBTOOL with LT_INIT. With this,
	    drop AC_LIBTOOL_WIN32_DLL, as we haven't really declared
	    dllexport anywhere yet.
	  - Replace obsolete AC_LIBTOOL_LINKER_OPTION() with
	    _LT_LINKER_OPTION(). Also quote an m4 string.
	  - Replace obsolete AC_HELP_STRING() with AS_HELP_STRING().
	  - Replace parameterized AC_OUTPUT() with AC_CONFIG_FILES()
	    and parameter-less AC_OUTPUT.
	  - Update AC_PREREQ() from 2.59 to 2.71.

2021-08-19  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-common.txt, data/tdict-spell.txt:
	  - Move "องคชาติ" from common to spell.

2021-08-19  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Update word break dictionary.

	* data/tdict-common.txt:
	* data/tdict-district.txt:
	* data/tdict-geo.txt:
	* data/tdict-history.txt:
	* data/tdict-lang-ethnic.txt:
	* data/tdict-proper.txt:
	* data/tdict-science.txt:
	* data/tdict-slang.txt:
	* data/tdict-spell.txt:
	  - Add words.

2021-03-22  Theppitak Karoonboonyanan  <theppitak@gmail.com>

	Prohibit break between Thai/Alpha and Percent

	LB24 of UAX#14 prohibits break between AL and PO,
	and between PO and AL, without example. But cases like
	"ten%" can be found in the internet, and similar usage
	like "สิบ%" sounds sensible in Thai.

	* tests/test_thbrk.c (TestSamples):
	  - Add test case